# rua

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
src/: instruction.rs  lib.rs  main.rs
src/binary/: mod.rs  reader.rs
src/lexer/: lexer.rs  mod.rs  number.rs  string.rs
src/parser/: block.rs  consteval.rs  expression.rs  mod.rs  operator.rs  parser.rs  statement.rs
src/vm/: instruction.rs
