[package]
name = "rua"
version = "0.1.0"
authors = ["condy <condy0919@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
phf = { version = "0.8", features = ["macros"] }
if_chain = "1.0.1"